<resources>
    <string name="app_name">Anfang</string>
    <string name="hello">Hello</string>
    <string name="txtRefresh">Refresh</string>
    <string name="txtImsak">Imsak</string>
    <string name="txtSunrise">Sunrise</string>
    <string name="txtDhuhr">Dhuhr</string>
    <string name="txtAsr">Asr</string>
    <string name="txtMaghrib">Maghrib</string>
    <string name="txtIsha">Isha</string>
    <string name="txtImsakTime">00:00</string>
    <string name="txtSunriseTime">00:00</string>
    <string name="txtDhuhrTime">00:00</string>
    <string name="txtAsrTime">00:00</string>
    <string name="txtMaghribTime">00:00</string>
    <string name="txtIshaTime">00:00</string>
    <string name="txtPrayersTimeLine">Prayers Time line</string>
    <string name="txtDate">Date: </string>
    <string name="txtLastUpdateTime">Last Update Time:</string>
    <string name="txtAbout">About</string>
    <string name="txtPrayers">Prayers</string>
    <string name="txtWifiSettings">Wifi Settings</string>
    <string name="txtPlugName">Plug</string>
    <string name="btnPlugDetails">See Plug\'s Details</string>
    <string name="switchPlugState">&#160;</string>
    <string name="logo">Logo</string>
    <string name="txtDisplayAllPlugs">Display All Plugs</string>
    <string name="about_us_description">Khaled</string>
    <string name="twitterHandle">\@el3orb</string>
    <string name="about_image_desc">About Image</string>
    <string name="txtAboutVersion">V 1.0</string>
    <string name="copyRight">Copy Right © el3orb</string>
    <string name="txtAddNewPlug">Add New Plug</string>
    <string name="txtEditPlugName">Edit Plug Name</string>
    <string name="plugsCard">plugsCard</string>
    <string name="pharmaciesCard">pharmaciesCard</string>
    <string name="plugNewName">Insert name</string>
    <string name="delete_node">Delete Node</string>
</resources>